# gearx

./: .gitignore  README.md  README_ja.md
src/: CMakeLists.txt
src/color/: color.hpp
src/math/: angle_utils.hpp  coord_utils.cpp  coord_utils.hpp  spherical_coord.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp
src/shapes/: CMakeLists.txt  how to use glu .txt  main.cpp  shape_list.hpp
src/shapes/2d/: shape2D.hpp
src/shapes/3d/: flat_renderfunctions.cpp  flat_renderfunctions.hpp  normal.cpp  normal.hpp  shape3D.hpp  solid_renderfunctions.cpp  solid_renderfunctions.hpp
src/shapes/cache/: circle_cache.cpp  circle_cache.hpp
src/shapes/shape3D/: shape3D.hpp
src/ui/: CMakeLists.txt  axis_controller.hpp  gizmo.hpp  main.cpp  orbit_gizmo.hpp  ui_controller_base.hpp  ui_render_scope2d.hpp  ui_render_state.hpp
src/ui/test/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/watchparts/: csg_watch.hpp
src/watchparts/csg/mainplate/: CMakeLists.txt  main.cpp  mainplate.hpp
src/watchparts/csg/mainplate/hellow/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  main.cpp
